Contains finalized important funtion for all class